--- a/Docs/接入指引2.md
+++ b/Docs/接入指引2.md
@@ -33,9 +33,24 @@
 
 下载Demo，直接进入课堂体验吧。
 
-| PC | MAC | Android | ios | web |
-| --- | --- | --- | --- | --- |
-|  |  |  |  |  |
+<table>
+    <tr>
+        <th style="text-align:center">Web</th>
+        <th style="text-align:center">小程序</th>
+        <th style="text-align:center">Android</th>
+        <th style="text-align:center">iOS</th>
+        <th style="text-align:center">macOS</th>
+        <th style="text-align:center">Windows</th>
+    </tr>
+    <tr>
+        <td style="text-align:center"><a href="https://tedu.qcloudtrtc.com/">立即体验</a></td>
+        <td style="text-align:center">即将推出</td>
+        <td style="text-align:center"><img src="https://main.qcloudimg.com/raw/c9619497d26c6d4ed75921ce2a298596.png" width="150"/></td>
+        <td style="text-align:center"><img src="https://main.qcloudimg.com/raw/35664baf9512c57ac3c2b5436ab5d567.png" width="150"/></td>
+        <td style="text-align:center"><a href="http://dldir1.qq.com/hudongzhibo/Saas/TClass_Demo.dmg">立即体验</a></td>
+        <td style="text-align:center"><a href="http://dldir1.qq.com/hudongzhibo/Saas/TClass_Setup_Demo.exe">立即体验</a></td>
+    </tr>
+</table>
 
 
 demo功能可参考下面的桌面端/移动端使用手册。
