--- a/Docs/接入指引2.md
+++ b/Docs/接入指引2.md
@@ -57,7 +57,7 @@ demo功能可参考下面的桌面端/移动端使用手册。
 
 ### SAAS方案接入
 
-1. 在控制台进行课堂管理和老师/学生管理。[控制台使用手册](../SaaS/%e6%8e%a7%e5%88%b6%e5%8f%b0%e4%bd%bf%e7%94%a8%e6%89%8b%e5%86%8c.md)
+1. 在控制台进行课堂管理和老师/学生管理。[控制台使用手册](./SaaS/%e6%8e%a7%e5%88%b6%e5%8f%b0%e4%bd%bf%e7%94%a8%e6%89%8b%e5%86%8c.md)
 2. 下载桌面端app，体验完整功能。[桌面端使用手册]()
 3. 下载移动端app，体验完整功能。[移动端使用手册]()
 4. 直接使用腾讯云互动课堂app的客户，请参考[客户端app方式接入指南]()
