--- a/Docs/PaaS/SDK文档/Android/互动课堂接入文档.md
+++ b/Docs/PaaS/SDK文档/Android/互动课堂接入文档.md
@@ -179,7 +179,7 @@ mTicManager.destroyClassroom(mRoomId, new TICManager.TICCallback() {
 ```
 TICClassroomOption 中的 `classId`是课堂 ID，`TICClassroomOption`参数说明如下：
 
-| 参数名 | 参数类型 | 参数说明 |
+ | 参数名 | 参数类型 | 参数说明 |
  | ------  |-------|-------|
  | classId | int | 课堂 ID |
  | ntpServer | String | 进行时间校准 server，一般不需要修改 |
@@ -274,7 +274,7 @@ mTrtcCloud.stopLocalPreview();
 只有创建`TIC_CLASS_SCENE_LIVE`场景的课堂才支持1000人以上大房间。
 
 ```objc
-final int scence = TICManager.TICClassScene.TIC_CLASS_SCENE_LIVE; //如果使用大房间，请使用 TIC_CLASS_SCENE_VIDEO_CALL
+final int scence = TICManager.TICClassScene.TIC_CLASS_SCENE_LIVE; 
 mRoomId = Integer.valueOf(inputString);
 mTicManager.createClassroom(mRoomId, scence, new TICManager.TICCallback());
 ```
@@ -298,13 +298,14 @@ mTicManager.witchRole(TICManager.TICClassScene.TIC_ROLE_TYPE_AUDIENCE);
 
 ### 离线白板录制
 
+
 | 文件名称 | 说明 | 
 |------|-----|
-| TICRecorder.java | 录制功能定义 | 
+|TICRecorder.java|录制功能定义| 
+
 
 TIC 源码进房成功后自动发送离线录制需要的对时消息并上报群组 ID，对时消息发送成功您会收到`TICEventListener`的回调`onTICSendOfflineRecordInfo`。
 
->!
 1. demo 时间校准消息 ntp 时间戳是从腾讯云 ntp 服务获取，您可以选择搭建自己的 ntp 服务器。
 2. 由于 IM 群消息有可能大于10000，当 IM 群消息大于10000时，消息会开始丢弃，导致空洞消息。上报群组后，后台判断，当群组中 IM 消息大于10000时，会自动备份群消息到 COS。
 
