--- a/PaaS/Docs/文档转码.md
+++ b/PaaS/Docs/文档转码.md
@@ -99,8 +99,10 @@ Body 参数（JSON 格式）
 
 | 参数名         | 类型    | 描述                                                                                                                                                                     |
 |:--------------|:-------|:------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| url           | string | 在 [上传文档并获取链接](#jump4.1) 中获取的下载 URL，请检查 URL 的访问权限       |
-| is_static_ppt | bool   | 是否为静态 PPT，默认为 false，当`is_static_ppt`为 false 时，后缀名为`.ppt`或`.pptx`的文档会动态转码成`HTML5`页面，其他格式的文档会静态转码成图片，如果`is_static_ppt`为 true，所有格式的文档会静态转码成图片 |
+| url                      | string | 在 [上传文档并获取链接](#jump4.1) 中获取的下载 URL，请检查 URL 的访问权限       |
+| min_resolution           | string | 转码后文档的最小分辨率，不传、传空字符串或分辨率格式错误则使用文档原分辨率;</br>注意分辨率宽高中间为英文字母"xyz"的"x"       |
+| thumbnail_resolution           | string | 动态PPT转码可以为文件生成该分辨率的缩略图，不传、传空字符串或分辨率格式错误则不生成缩略图，</br>分辨率格式同min_resolution; 注意静态转码这个参数不起作用       |
+| is_static_ppt | bool   | 是否为静态 PPT，默认为 false，当`is_static_ppt`为 false 时，后缀名为`.ppt`或`.pptx`的文档会动态转码成`HTML5`页面，</br>其他格式的文档会静态转码成图片，如果`is_static_ppt`为 true，所有格式的文档会静态转码成图片 |
 
 请求示例：
 请将参数替换为实际值。
@@ -111,6 +113,8 @@ Body 参数（JSON 格式）
 请求包体：
 {
     "url": "http://e4fb-edu-1400127115-1257240643.cos.ap-shanghai.myqcloud.com/语文课.ppt",
+    "min_resolution": "960x540",
+    "thumbnail_resolution": "480x320",
     "is_static_ppt": false
 }
 ```
