--- a/PaaS/Docs/文档转码.md
+++ b/PaaS/Docs/文档转码.md
@@ -406,6 +406,8 @@ Body 参数（JSON 格式）
 | -26    | ppt 下载数据失败                      | 请检查 ppt 下载服务器网络状况                              |
 | -27    | ppt 下载数据超时                      | 请检查 ppt 下载服务器网络状况或是否 ppt 过大，导致下载超时 |
 | -28    | ppt 包含自动翻页                      | 请根据错误信息中的页数，检查该页和该页之后的页是否有自动翻页；</br>如果错误信息中，无具体页数"Page unkown"，则代表无法获取某一页含有自动翻页，请手动确认或联系管理员 |
+| -29    | ppt 中动画同时含音频和自动动画属性    | 请根据错误信息中的页数，检查该页中的动画是否同时含有“音频”+“自动动画”属性|
+| -30    | ppt 转码引擎出现错误    | 转码引擎出现错误，请重试转码 或 联系管理员|
 | -101  | task info 文件读取失败           | 请联系维护人员             |
 | -102  | task info 格式不正确             | 请联系维护人员             |
 | -103  | task info 的 error_code 不等于0 | 请联系维护人员             |
