--- a/PaaS/Docs/文档转码.md
+++ b/PaaS/Docs/文档转码.md
@@ -522,3 +522,6 @@ ppt 保存时，将字体库一起打包进 ppt。
 问题原因：1. ppt 文件，可能是“只读”、“加密”、或其他保护，导致 ppt 无法被编辑；2. ppt 文件，可能含有不支持的转码属性
 解决方法：如果 ppt 不支持编辑：修改 ppt 为可编辑，然后再次尝试转码。
 如果含有不支持的属性：PowerPoint 打开 ppt，修改 PowerPoint 提示的异常属性，然后再次尝试转码。
+7. 为什么会遇到“-29 Page [x,x,x] The same animation contains both audio and autoplay!not suport!”错误呢？应该如何解决？
+问题原因：h5文档转码，暂时不支持ppt的某个动画，同时包含“声音”和“自动动画(与上一个动画同时 或 上一个动画之后)”属性
+解决方法：去掉对应页动画的“音频”或“自动动画”属性，然后重新尝试转码即可
