--- a/PaaS/Docs/实时录制.md
+++ b/PaaS/Docs/实时录制.md
@@ -242,9 +242,9 @@ MixStream 参数
 |:--- | :--- | :--- | :--- |
 | enabled | bool | 是否开启混流 | 是 |
 | disable_audio | bool | 是否禁用音频混流 | 否 |
-| model_id | int | 内置混流布局模板 ID，取值 [1, 2]，区别见内置混流布局模板样式示例说明 | 否, 未填写 custom 字段时，此字段必填|
-| teacher_id | string | 老师用户 ID <br> 填写 teacher_id 是把指定为 teacher_id 的用户视频流显示在内置模板的第一个小画面中 | 否，此字段只在 model_id 已填写时生效 |
-| custom | CustomLayout | 自定义混流布局参数 | 否，当此字段存在时，model_id 及 teacher_id 字段将被忽略 |
+| model_id | int | 内置混流布局模板 ID，取值 [1, 2]，区别见内置混流布局模板样式示例说明 <br> 未填写 custom 字段时，model_id 字段必填 | 否 |
+| teacher_id | string | 老师用户 ID <br> 此字段只在 model_id 已填写时生效 <br> 填写 teacher_id 是把指定为 teacher_id 的用户视频流显示在内置模板的第一个小画面中 | 否 |
+| custom | CustomLayout | 自定义混流布局参数 <br> 当此字段存在时，model_id 及 teacher_id 字段将被忽略 | 否 |
 
 CustomLayout 参数 
 
