--- a/PaaS/Docs/课后录制.md
+++ b/PaaS/Docs/课后录制.md
@@ -10,7 +10,7 @@
 
 若您没有开通课后录制服务，请按照 [购买指南](../../购买指南.md) 购买相应的服务后发送邮件申请开通，并按照文档流程开启实时音视频云端录制以及提供 App 管理员的`UserId`和`UserSig`。
 
->!实时音视频云端录制和白板课后录制是两个独立的录制模块，白板课后录制结束后将透传实时音视频云端录制文件的下载地址。
+>!实时音视频云端录制和白板课后录制是两个独立的录制模块，白板课后录制结束后将透传实时音视频云端录制文件的下载地址（透传即原封不动的将实时音视频的下载地址返回，录制后台不会做修改）。
 
 
 ### 发起课后录制
@@ -204,9 +204,9 @@ MixStream 参数
 Whiteboard 参数
 
 | 参数名     | 类型   | 描述                                                                                       | 是否必填 |
-| :--------- | :----- | :----------------------------------------------------------------------------------------- | :------- |
-| width      | int    | 实时录制结果里白板视频宽，默认为1280                                                       | 否       |
-| height     | int    | 实时录制结果里白板视频高，默认为960                                                        | 否       |
+|:-----------|:-------|:-----------------------------------------------------------------------|:-------|
+| width      | int    | 实时录制结果里白板视频宽，默认为1280                                               | 否      |
+| height     | int    | 实时录制结果里白板视频高，默认为960                                     | 否      |
 | init_param | string | 白板初始化参数，透传到白板 SDK，参数详见 [互动白板接入文档](./SDK文档/互动白板接入文档.md) | 否       |
 
 >?
